<resources>
    <string name="app_name">Day2EJColores</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_act__login">Act_Login</string>
    <string name="title_activity_calculator">Calculator</string>
    <string name="action_Login">Login</string>
    <string name="action_Twitter">Twitter</string>
    <string name="action_Database">Database</string>
    <string name="action_About">About</string>
    <string name="action_Exit">Exit</string>
    <string name="snackbar_text">Do you agree PI is 3?</string>
    <string name="snackbar_actionY">Yes</string>
    <string name="snackbar_actionN">No</string>
    <string name="pi_wrongChoice">You are wrong</string>
    <string name="title_activity_async_test">AsyncTest</string>
    <string name="title_activity_act__register">Act_Register</string>
    <string name="title_activity_sact__checknest">Sact_Checknest</string>
    <string name="title_activity_music_player">MusicPlayer</string>
    <string name="s_nyaa">Nyaa</string>
    <string name="title_activity_act__gps">Act_GPS</string>
    <string name="USER_PREFS">userPrefs</string>
    <string name="action_Call">Call</string>
    <string name="action_Explorer">Explorer</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_act__memory">Act_Memory</string>

</resources>
