<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.android.dango.day2ejcolores.Calculator">
    <item android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@android:drawable/ic_menu_compass"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_login"
        android:orderInCategory="101"
        android:title="@string/action_Login"
        app:showAsAction="never">
        <menu>
            <item android:id="@+id/action_login_twitter"
                android:orderInCategory="100"
                android:icon="@drawable/ic_twitter"
                android:title="@string/action_Twitter" />
            <item android:id="@+id/action_login_BBDD"
                android:orderInCategory="101"
                android:icon="@drawable/ic_crow"
                android:title="@string/action_Database" />
        </menu>
    </item>
    <item android:id="@+id/action_about"
        android:orderInCategory="102"
        android:title="@string/action_About"
        android:icon="@android:drawable/ic_dialog_info"
        app:showAsAction="never" />
    <item android:id="@+id/action_call"
        android:orderInCategory="103"
        android:title="@string/action_Call"
        app:showAsAction="never" />
    <item android:id="@+id/action_explorer"
        android:orderInCategory="104"
        android:title="@string/action_Explorer"
        app:showAsAction="never" />
    <item android:id="@+id/action_logout"
        android:orderInCategory="105"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>
